Fixed linting and changelog