@@ -105,10 +105,11 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M3</version> <!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
             <configuration>
-              <argLine>
+              <argLine>earchIndexerAsyncClient
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
                 --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents=ALL-UNNAMED
+                --add-opens com.azure.search.documents/com.azure.search.documents.indexes=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents.models=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents.implementation=ALL-UNNAMED
                 --add-opens com.azure.search.documents/com.azure.search.documents.implementation.models=ALL-UNNAMED
